handling profile API's

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -17,6 +17,7 @@
   "changeImage": "تغيير صورة الملف الشخصي",
   "firstName": "الإسم الأول",
   "lastName": "الإسم الأخير",
+  "address": "العنوان",
   "username": "إسم المستخدم",
   "bio": "السيرة الذاتية",
   "email": "الإيميل",
