--- a/languages/ar.json
+++ b/languages/ar.json
@@ -14,6 +14,8 @@
   "editProfile": "تعديل الملف الشخصي",
   "followers": "المتابعين",
   "posts": "المنشورات",
+  "comments": "التعليقات",
+  "comment": "أضف تعليق...",
   "changeImage": "تغيير صورة الملف الشخصي",
   "firstName": "الإسم الأول",
   "lastName": "الإسم الأخير",
