--- a/languages/en.json
+++ b/languages/en.json
@@ -14,6 +14,8 @@
   "editProfile": "Edit Profile",
   "followers": "Followers",
   "posts": "Posts",
+  "comments": "Comments",
+  "comment": "Add a comment...",
   "changeImage": "Change Profile Image",
   "firstName": "First Name",
   "lastName": "Last Name",
