--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,8 @@
   "home": "Home",
   "logo": "fadfada",
   "createPost": "Create Post",
+  "editPost": "Edit Post",
+  "update": "update",
   "post": "Post",
   "postMotive": "Express your feelings, you are not alone\nWe are all here with you",
   "whatsHappening": "What's happening?",
