--- a/languages/ar.json
+++ b/languages/ar.json
@@ -2,6 +2,8 @@
   "home": "الرئيسية",
   "logo": "فضفضة",
   "createPost": "إنشاء منشور",
+  "editPost": "تعديل منشور",
+  "update": "تحديث",
   "post": "نشر",
   "postMotive": "عبر عن مشاعرك, أنت لست وحدك\nنحن جميعا هنا معك",
   "whatsHappening": "ماذا يحدث؟",
